# fullscreen-message

./: README.md  pyproject.toml
fullscreen_message/: main.py
