[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fullscreen-message"
version = "1.0.0"
description = "A command-line tool to show big messages across the entire screen in a GUI"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "@readwithai", email = "talwrii@googlemail.com"}
]
keywords = ["notification", "message", "fullscreen", "alert", "display"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/talwrii/fullscreen-message"
Issues = "https://github.com/talwrii/fullscreen-message/issues"

[project.scripts]
fullscreen-message = "fullscreen_message.main:main"
